--- a/resources/assets/sass/custom.sass
+++ b/resources/assets/sass/custom.sass
@@ -27,7 +27,7 @@ img
         .navbar-menu
             margin-right: 0
         .navbar-brand
-            margin-left: 0px    
+            margin-left: 0px
 
 .hero
     &.is-ws-grey
@@ -75,6 +75,11 @@ img
     .subtitle
         font-size: 40px
 
+.level
+    flex-wrap: wrap
+    .level-right
+        margin-top: 5px
+        margin-left: auto
 
 @media (max-width: 1024px)
     .navbar-menu
